Fixed overflow issue caused by site-footer ui element.

--- a/heha/assets/css/less/ui/_site-footer.less
+++ b/heha/assets/css/less/ui/_site-footer.less
@@ -53,7 +53,6 @@
      */
     @media (min-width: @screen-sm-min) {
         float: left;
-        text-align: right;
         width: 40%;
     }
 
@@ -66,8 +65,6 @@
     float: left;
     height: 100px * .5;
     margin-bottom: @bsu * .50;
-    text-align: right;
-    text-indent: 9999px;
     width: 155px * .5;
 
     a {
@@ -98,5 +95,6 @@
 
 .site-footer__copyright {
     clear: both;
+    text-align: right;
     margin-bottom: 0;
 }
